syntax="proto3";

//指定包名
package sendmsg;

option go_package ="../sendmsg;sendmsg";


//定义结构体
message SendMsgRequest {
    //定义用户名
    string request_type = 1;
    string accepter = 2;
    map<string,string> data = 3;
    string updateType = 4;
    string msg = 5;
}


//响应结构体
message SendMsgResponse {
    uint32 code = 1;
    string msg = 2;
}

//service定义方法
service SendMsgService{
    rpc SendMsg(SendMsgRequest) returns (SendMsgResponse){}
}